<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.colortiger.anymotesdkexample.MainActivity"
>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	>
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:baselineAligned="false"
		>
		    <TextView 
		    	android:id="@+id/fw"
		    	android:layout_width="0dip"
		    	android:layout_height="wrap_content" 
		    	android:padding="5dip"   
		    	android:layout_weight="1"
		    	android:gravity="center_vertical"
		    />
		    <TextView 
		    	android:id="@+id/hw"
		    	android:layout_width="0dip"
		    	android:layout_height="wrap_content" 
		    	android:padding="5dip"   
		    	android:layout_weight="1"
		    	android:gravity="center_vertical"
		    />
		</LinearLayout>
		
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:baselineAligned="false"
		>
		    <Button 
		    	android:id="@+id/rename"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="rename"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		    <TextView 
		    	android:id="@+id/state"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="connecting..."
		    	android:layout_weight="1"
		    	android:gravity="center"
		    />
		</LinearLayout>
	    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:baselineAligned="false"
		>
		    <Button 
		    	android:id="@+id/volUp"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/sam_vol_up"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		    <Button 
		    	android:id="@+id/volDown"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/sam_vol_down"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		    
		    <Button 
		    	android:id="@+id/chUp"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/sam_ch_up"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		    <Button 
		    	android:id="@+id/chDown"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/sam_ch_down"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:baselineAligned="false"
		>
		    <Button 
		    	android:id="@+id/lgVolUp"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/lg_vol_up"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		    <Button 
		    	android:id="@+id/lgVolDown"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/lg_vol_down"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		    <Button 
		    	android:id="@+id/lgChUp"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/lg_ch_up"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		    <Button 
		    	android:id="@+id/lgChDown"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/lg_ch_down"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:baselineAligned="false"
		>
		    <Button 
		    	android:id="@+id/learn"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/learn"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		    <Button 
		    	android:id="@+id/sendLearned"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/send_learned"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:baselineAligned="false"
		>
		    <Button 
		    	android:id="@+id/save"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/save"
		    	android:layout_weight="1"
		    />
		    <Button 
		    	android:id="@+id/delete"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="@string/delete"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:baselineAligned="false"
		>
		    <Button 
		    	android:id="@+id/listAuth"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="list allowed ids"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		    <Button 
		    	android:id="@+id/addAuth"
		    	android:layout_width="0dip"
		    	android:layout_height="70dip" 
		    	android:padding="10dip"   
		    	android:text="add auth id"
		    	android:layout_weight="1"
		    	android:enabled="false"
		    />
		</LinearLayout>
	</LinearLayout>    
</ScrollView>

