<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.colortiger.anymotesdkexample.MainActivity" >

	<TextView
		android:id="@+id/text"
		android:textColor="#000000"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"    
	/>
	    
    <Button 
    	android:id="@+id/scan"
    	android:layout_width="match_parent"
    	android:layout_height="48dip"
    	android:text="@string/start_scan"
    />
    
    <TextView
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:padding="4dip"
    	android:text="@string/saved_devices"    
    	android:textColor="#EEEEEE"
    	android:background="#333333"
	/>
    <LinearLayout
        android:id="@+id/savedContainer"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
	/>
    <TextView
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:padding="4dip"
    	android:text="@string/found_devices"    
    	android:textColor="#EEEEEE"
    	android:background="#333333"
    	android:layout_marginTop="3dip"
	/>
    <ListView 
     	android:id="@+id/list"
     	android:layout_width="match_parent"
     	android:layout_height="match_parent"   
     	android:background="#EEEEEE"
    />
</LinearLayout>
